auth service, guard

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -820,7 +820,7 @@
  
 
   <script>
-    var win = navigator.platform.indexOf('Win') > -1;
+    // var win = navigator.platform.indexOf('Win') > -1;
     if (win && document.querySelector('#sidenav-scrollbar')) {
       var options = {
         damping: '0.5'
