--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -56,30 +56,44 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <form role="form" class="text-start">
+
+                                <form role="form" class="text-start" [formGroup]="loginForm" autocomplete="off">
+
                                     <div class="input-group input-group-outline my-3">
                                         <label class="form-label">E-mail</label>
-                                        <input type="email" class="form-control">
+                                        <input type="email" formControlName='email' class="form-control"
+                                            autocomplete="off">
                                     </div>
+
                                     <div class="input-group input-group-outline mb-3">
                                         <label class="form-label">Şifre</label>
-                                        <input type="password" class="form-control">
+                                        <input type="password" formControlName='password' class="form-control">
                                     </div>
+
                                     <div class="form-check form-switch d-flex align-items-center mb-3">
                                         <input class="form-check-input" type="checkbox" id="rememberMe">
-                                        <label class="form-check-label mb-0 ms-2" for="rememberMe">Şifremi
-                                            Hatırla</label>
+                                        <label class="form-check-label mb-0 ms-2" for="rememberMe">
+                                            Şifremi Hatırla
+                                        </label>
                                     </div>
+
                                     <div class="text-center">
-                                        <button type="button"
-                                            class="btn bg-gradient-primary w-100 my-4 mb-2">Giriş</button>
+                                        <button type="button" class="btn bg-gradient-primary w-50 my-4 mb-2"
+                                            (click)="login()">
+                                            Giriş
+                                        </button>
                                     </div>
+
                                     <p class="mt-4 text-sm text-center">
                                         Hesabınız yok mu?
                                         <a href="../pages/sign-up.html"
-                                            class="text-primary text-gradient font-weight-bold">Kayıt Ol</a>
+                                            class="text-primary text-gradient font-weight-bold">
+                                            Kayıt Ol
+                                        </a>
                                     </p>
+
                                 </form>
+
                             </div>
                         </div>
                     </div>
@@ -102,7 +116,7 @@
     </main>
 
     <script>
-        var win = navigator.platform.indexOf('Win') > -1;
+        // var win = navigator.platform.indexOf('Win') > -1;
         if (win && document.querySelector('#sidenav-scrollbar')) {
             var options = {
                 damping: '0.5'
