--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -4,16 +4,17 @@
     <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard "
         target="_blank">
         <img src="/../assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold text-white">Kullanıcı adı</span>
+        <span class="ms-1 font-weight-bold text-white">{{name}}</span>
     </a>
 </div>
 
 <hr class="horizontal light mt-0 mb-2">
 <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
+
     <ul class="navbar-nav">
 
         <li class="nav-item">
-            <a class="nav-link text-white active bg-gradient-primary" href="#">
+            <a [class]="sidenavButtonClass('')" routerLink=''>
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">home</i>
                 </div>
@@ -44,7 +45,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link text-white " href="#">
+            <a [class]="sidenavButtonClass('currencyAccount')" routerLink="/currencyAccount">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">receipt_long</i>
                 </div>
@@ -89,12 +90,17 @@
         </li>
 
     </ul>
+
+   
+
 </div>
 
 <div class="sidenav-footer position-absolute w-100 bottom-0 ">
     <div class="mx-3">
-        <a class="btn bg-gradient-primary mt-4 w-100"href="#" type="button">
+        <a class="btn bg-gradient-primary mt-4 w-100" (click)="logout()" type="button">
             Çıkış Yap
         </a>
     </div>
 </div>
+
+
