--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,10 @@
-<div class="g-sidenav-show bg-gray-200">
 
 
 
   <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 
     bg-gradient-dark" id="sidenav-main">
 
-   <app-sidenav></app-sidenav>
+    <app-sidenav></app-sidenav>
 
   </aside>
 
@@ -14,25 +13,34 @@
     <app-nav></app-nav>
 
     <div class="container-fluid py-4">
+      
       <div class="row">
+
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
+
             <div class="card-header p-3 pt-2">
-              <div
-                class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
+
+              <div class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center
+               border-radius-xl mt-n4 position-absolute">
                 <i class="material-icons opacity-10">weekend</i>
               </div>
+
               <div class="text-end pt-1">
                 <p class="text-sm mb-0 text-capitalize">Today's Money</p>
                 <h4 class="mb-0">$53k</h4>
               </div>
+
             </div>
+
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
               <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+55% </span>than lask week</p>
             </div>
+
           </div>
         </div>
+
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-header p-3 pt-2">
@@ -51,6 +59,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
             <div class="card-header p-3 pt-2">
@@ -69,6 +78,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-xl-3 col-sm-6">
           <div class="card">
             <div class="card-header p-3 pt-2">
@@ -87,6 +97,7 @@
             </div>
           </div>
         </div>
+
       </div>
 
       <div class="row mt-4"></div>
@@ -588,4 +599,3 @@
 
 
 
-</div>
