--- a/src/app/components/currency-account/currency-account.component.html
+++ b/src/app/components/currency-account/currency-account.component.html
@@ -33,6 +33,13 @@
 
 
                         <div class="col-md-6" style=" float: right;">
+
+                            <button type="button" class="btn btn-lg bg-gradient-danger mx-2" (click)="exportToExcel()"
+                                style=" float: right;">
+                                <i class="fa-solid fa-download" style="font-size: 15px; margin-right: 5px;"></i>
+                                Cari Listesini Excel'e Aktar
+                            </button>
+
                             <button type="button" class="btn btn-lg bg-gradient-success mx-2" style=" float: right;">
                                 <i class="fa-solid fa-file-excel" style="font-size: 15px; margin-right: 5px;"></i>
                                 Cari Ekle (Excel)
@@ -57,7 +64,7 @@
                     </div>
                     <div class="card-body px-0 pb-2">
                         <div class="table-responsive p-0">
-                            <table class="table align-items-center mb-0">
+                            <table id="currencyAccountTable" class="table align-items-center mb-0">
                                 <thead>
                                     <tr>
                                         <th class=" text-secondary text-xs font-weight-bolder opacity-7">
@@ -131,15 +138,14 @@
                                         </td>
                                         <td class="align-middle">
                                             <div class="row justify-content-center mx-2">
-                                                <button type="button" class="btn btn-info btn-sm"
-                                                    data-bs-toggle="modal" data-bs-target="#updateCurrencyAccountModal">
+                                                <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal"
+                                                    data-bs-target="#updateCurrencyAccountModal">
                                                     Güncelle
                                                 </button>
                                             </div>
                                             <div class="row justify-content-center mx-2">
                                                 <button type="button" class="btn btn-danger btn-sm mx-2 w-50"
-                                                    data-bs-toggle="modal"
-                                                    data-bs-target="#updateCurrencyAccountModal">
+                                                    data-bs-toggle="modal" data-bs-target="#updateCurrencyAccountModal">
                                                     Sil
                                                 </button>
                                             </div>
