--- a/src/app/components/currency-account/currency-account.component.html
+++ b/src/app/components/currency-account/currency-account.component.html
@@ -144,8 +144,8 @@
                                                 </button>
                                             </div>
                                             <div class="row justify-content-center mx-2">
-                                                <button type="button" class="btn btn-danger btn-sm mx-2 w-50"
-                                                    data-bs-toggle="modal" data-bs-target="#updateCurrencyAccountModal">
+                                                <button class="btn btn-sm btn-danger"
+                                                    (confirm)="delete(currencyAccount)" [swal]="deleteCurrencyAccount">
                                                     Sil
                                                 </button>
                                             </div>
@@ -167,3 +167,8 @@
     </div>
 
 </main>
+
+<swal type="question" #deleteCurrencyAccount title="Sil" text="Cari hesabı silmek istiyor musunuz?"
+    [showCancelButton]="true" confirmButtonText="Evet" cancelButtonText="Hayır" confirmButtonColor="#ff0000"
+    cancelButtonColor="#00ff00" [focusCancel]="true">
+</swal>
