--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -45,7 +45,7 @@
         </li>
 
         <li class="nav-item">
-            <a [class]="sidenavButtonClass('currencyAccount')" routerLink="/currencyAccount">
+            <a [class]="sidenavButtonClass('currentAccount')" routerLink="/currentAccount">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="material-icons opacity-10">receipt_long</i>
                 </div>
