--- a/src/app/components/current-account/current-account.component.css
+++ b/src/app/components/current-account/current-account.component.css
@@ -1,3 +1,14 @@
 ::placeholder {
-    color: darkolivegreen;
+    color: black;
+}
+
+form .ng-valid {
+    border-left: 5px solid #42A948;
+    /* green */
+
+}
+
+form .ng-invalid {
+    border-left: 5px solid #a94442;
+    /* red */
 }
