--- a/src/app/components/current-account/current-account.component.html
+++ b/src/app/components/current-account/current-account.component.html
@@ -58,7 +58,7 @@
                                 <input type="text" class="form-control" onfocus="focused(this)"
                                     onfocusout="defocused(this)"
                                     style="border-style: solid; border-color: red; border-width: 2px;"
-                                    [(ngModel)]='searchText' placeholder="Arama ifadesi giriniz">
+                                    [(ngModel)]='searchText' placeholder="Arama ifadesi giriniz" >
                             </div>
                         </div>
 
@@ -76,7 +76,8 @@
                                 Cari Ekle (Excel)
                             </button>
 
-                            <button type="button" class="btn btn-lg bg-gradient-info mx-2" style=" float: right;">
+                            <button type="button" class="btn btn-lg bg-gradient-info mx-2" style=" float: right;"
+                                data-bs-toggle="modal" data-bs-target="#addCurrencyAccountModal">
                                 <i class="fa-solid fa-user-plus" style="font-size: 14px; margin-right: 5px;"></i>
                                 Cari Ekle
                             </button>
@@ -176,8 +177,8 @@
                                                 </button>
                                             </div>
                                             <div class="row justify-content-center mx-2">
-                                                <button class="btn btn-sm btn-danger"
-                                                    (confirm)="delete(currentAccount)" [swal]="deleteCurrencyAccount">
+                                                <button class="btn btn-sm btn-danger" (confirm)="delete(currentAccount)"
+                                                    [swal]="deleteCurrencyAccount">
                                                     Sil
                                                 </button>
                                             </div>
@@ -204,7 +205,7 @@
 </swal>
 
 
-
+<!-- cari update -->
 <div class="modal fade" id="updateCurrencyAccountModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -247,7 +248,6 @@
                         <input type="password" formControlName='currentAccountAuthorized' class="form-control">
                     </div>
 
-
                     <div class="form-check form-check-info text-start ps-0">
 
                         <div class="row">
@@ -267,24 +267,8 @@
                             </div>
                         </div>
 
-
-
-
-
                     </div>
                 </form>
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -293,3 +277,101 @@
         </div>
     </div>
 </div>
+<!-- cari update -->
+
+
+<!-- cari add -->
+<div class="modal fade" id="addCurrencyAccountModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Cari Hesap Ekle</h5>
+            </div>
+            <div class="modal-body">
+
+                <form role="form" class="text-start" [formGroup]="addCurrencyAccountForm">
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class='input-group input-group-outline my-3'>
+                                <!-- <label class="form-label">Cari Adı</label> -->
+                                <input type="text" formControlName='name' placeholder="Cari Adı" class="form-control"
+                                    autocomplete="off">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class='input-group input-group-outline my-3'>
+                                <!-- <label class="form-label">Cari Kodu</label> -->
+                                <input type="text" formControlName='code' class="form-control" placeholder="Cari Kodu"
+                                    autocomplete="off">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="input-group input-group-outline mb-3">
+                        <!-- <label class="form-label">Cari Adresi</label> -->
+                        <input type="text" formControlName='address' class="form-control" placeholder="Cari Adresi"
+                            autocomplete="off">
+                    </div>
+
+                    <div class="input-group input-group-outline mb-3">
+                        <!-- <label class="form-label">Vergi Dairesi</label> -->
+                        <input type="text" formControlName='taxDepartment' class="form-control"
+                            placeholder="Vergi Dairesi" autocomplete="off">
+                    </div>
+
+                    <div class="input-group input-group-outline mb-3">
+                        <!-- <label class="form-label">Vergi Numarası</label> -->
+                        <input type="text" formControlName='taxIdNumber' class="form-control" minlength="10"
+                            placeholder="Vergi Numarası" maxlength="10" autocomplete="off">
+                    </div>
+
+                    <div class="input-group input-group-outline mb-3">
+                        <!-- <label class="form-label">T.C.K.N</label> -->
+                        <input type="text" formControlName='identityNumber' class="form-control" minlength="11"
+                            maxlength="11" placeholder="T.C.K.N" autocomplete="off">
+                    </div>
+
+                    <div class="input-group input-group-outline mb-3">
+                        <!-- <label class="form-label">Mail Adresi</label> -->
+                        <input type="email" formControlName='email' class="form-control" placeholder="Mail Adresi"
+                            autocomplete="off">
+                    </div>
+
+                    <div class="input-group input-group-outline mb-3">
+                        <!-- <label class="form-label">Yetkili Adı Soyadı</label> -->
+                        <input type="text" formControlName='authorized' class="form-control"
+                            placeholder="Yetkili Adı Soyadı" autocomplete="off">
+                    </div>
+
+                    <div class="form-check form-check-info text-start ps-0">
+
+                        <div class="row">
+
+                            <div class="col-md-3" style="color: black;">Durumu:</div>
+
+                            <div class="col-md-3">
+                                <span class="text-success mx-1">Aktif</span>
+                                <input class="form-check-input" type="checkbox" [(ngModel)]='checkboxTrue'
+                                    [ngModelOptions]="{standalone: true}" (change)="trueCheckbox()">
+                            </div>
+
+                            <div class="col-md-3">
+                                <span class="text-danger mx-1">Pasif</span>
+                                <input class="form-check-input" type="checkbox" [(ngModel)]='checkboxFalse'
+                                    [ngModelOptions]="{standalone: true}" (change)="falseCheckbox()">
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">İptal</button>
+                <button type="button" class="btn btn-primary" (click)="add()">Gönder</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- cari add -->
